# gam3du

./: .gitignore  Cargo.toml  LICENSE-MIT  README.de.md  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
applications/robot/: Cargo.toml  build.rs  control.api.json
applications/robot/native/: Cargo.toml
applications/robot/native/src/: main.rs
applications/robot/python/control/: api_client.pyi  robot copy.py  robot.py  robot_control_api.py  robot_control_api_async.py
applications/robot/python/plugin/: api_server.pyi  robot_plugin.py  robot_plugin_api.pyi
applications/robot/src/: api_endpoint.rs  error.rs  lib.rs  main.rs  native.rs  wasm.rs  webserver.rs
applications/robot/wasm/main/: Cargo.toml
applications/robot/wasm/main/src/: lib.rs
applications/robot/web/main/: Cargo.toml
applications/robot/web/main/src/: api_endpoint.rs  lib.rs
applications/robot/web/runtime-python/: Cargo.toml
applications/robot/web/runtime-python/src/: api_client.rs  lib.rs
applications/robot/web/static/: index.html  index.mjs  shared-channel.mjs
bindings/: Cargo.toml
bindings/python/: Cargo.toml
bindings/python/src/: bindgen.rs  lib.rs  runner.rs
bindings/src/: api.rs  event.rs  lib.rs
docs/: api.drawio  architecture.drawio  architecture.md  communication.drawio  organization.md  overview.drawio  overview2.drawio
documentation/: api.drawio  communication.drawio  organization.md  threads.drawio
engines/: Cargo.toml
engines/robot/: Cargo.toml  api.json
engines/robot/assets/: item.gltf  monkey.gltf
engines/robot/shaders/: floor.wgsl  robot.wgsl
engines/robot/src/: api.rs  events.rs  floor.rs  floor_renderer.rs  game_loop.rs  game_state.rs  lib.rs  model.rs  plugin.rs  projection.rs  render_state.rs  renderer.rs  robot_renderer.rs  scene.rs  scripting.rs  tile.rs
engines/robot/src/game_state/: animation.rs  floor.rs  orientation.rs  robot.rs
engines/robot/src/old/: lib.rs  renderer.rs  scene.rs
engines/robot/src/plugin/: native.rs  python.rs
engines/robot/src/renderer/: floor.rs  gltf_model.rs  my_model.rs  robot.rs
engines/src/: lib.rs
framework/: Cargo.toml
framework/common/: Cargo.toml
framework/common/src/: api.rs  api_channel.rs  event.rs  lib.rs  message.rs  module.rs
framework/common/src/api_channel/: native.rs  wasm.rs
framework/src/: api.rs  application.rs  event.rs  framework.rs  graphics_context.rs  lib.rs  logging.rs  message.rs  module.rs  python.rs  render_surface.rs  renderer.rs  surface_wrapper.rs
framework/src/application/ecs/: transform.rs
launchers/robot/: Cargo.toml  build.rs  control.api.json
launchers/robot/python/control/: robot.py  robot_control_api.py  robot_control_api_async.py
launchers/robot/python/plugin/: api_server.pyi  robot_plugin.py  robot_plugin_api.py  robot_plugin_api.pyi
launchers/robot/src/: main.rs
libraries/ecs/: Cargo.toml
libraries/ecs-kawogi/: Cargo.toml
libraries/ecs-kawogi/src/: lib.rs
libraries/ecs/src/: event_subscriber.rs  lib.rs  main.rs  runtime.rs  state.rs
libraries/file-storage/: Cargo.toml
libraries/file-storage/src/: lib.rs
libraries/geometry/: Cargo.toml
libraries/geometry/src/: camera.rs  lib.rs  projection.rs
libraries/gltf-model/: Cargo.toml
libraries/gltf-model/src/: lib.rs  model.rs  renderer.rs
libraries/time/: Cargo.toml
libraries/time/src/: lib.rs
libraries/wasm-tools/: Cargo.toml
libraries/wasm-tools/src/: lib.rs
libs/ecs/: Cargo.toml
libs/ecs-kawogi/: Cargo.toml
libs/ecs-kawogi/src/: lib.rs
libs/ecs/src/: entity.rs  lib.rs  main.rs  runtime.rs  state.rs  transform.rs
python/: call_between_rust_and_python.py  robot.py  robot_api.py  robot_api_async.py  robot_api_internal.pyi
runtimes/: Cargo.toml
runtimes/python/: Cargo.toml
runtimes/python/bindgen/: Cargo.toml
runtimes/python/bindgen/src/: identifier.rs  lib.rs
runtimes/python/src/: api_client.rs  api_server.rs  bindgen.rs  lib.rs  runner.rs
runtimes/python/wasm/: Cargo.toml
runtimes/python/wasm/src/: lib.rs
runtimes/python/wasm/www/: runtime_python_wasm_bg.wasm
runtimes/python/wasm/www_/: runtime_python_wasm.js  style.css
runtimes/src/: api.rs  event.rs  lib.rs  message.rs
shaders/: floor.wgsl  robot.wgsl
src/: api.rs  application.rs  application_state.rs  cube.rs  ecs.rs  framework.rs  lib.rs  logging.rs  main.rs  python.rs  scene.rs  shader.wgsl  transform.rs  wasm.rs
src/application/: component.rs  ecs.rs  entity.rs  event_subscriber.rs  robot.rs  runtime.rs  state.rs
src/application/ecs/: entity.rs
src/application/robot/: floor.rs  projection.rs  scene.rs
src/bindgen/: python.rs
src/main/: ace.rs  main.rs  tasks.rs  util.rs  wasm.rs
src/main/tasks/: robot_native.rs  robot_web.rs
src/scene/: camera.rs  cube.rs  floor.rs  projection.rs  robot.rs
src/tasks/: robot_web.rs
static/: bootstrap.js  index-old.html  index.html  index.js  index.mjs  runtime-python.html  shared-channel.mjs  style.css  worker.js
static/application/: module.js  module.mjs
static/runtime-python/: module.js  module.mjs  worker.js  worker.mjs
static/wasm-tools/: wasm.js
winit/: .gitignore  Cargo.toml  build.rs
winit/src/: main.rs  main1.rs  tracing.rs
winit/static/: index.html  style.css
winit/xtask/: Cargo.toml
winit/xtask/src/: main.rs  run_wasm.rs
workspace-common/: Cargo.toml
workspace-common/.cargo/: config.toml
workspace-web/: Cargo.toml
workspace-web/.cargo/: config.toml
xtask/: Cargo.toml
xtask/src/: ace.rs  main.rs  run_python_wasm.rs  run_wasm.rs  util.rs  wasm.rs
xtask/src/tasks/: robot_web.rs  run_wasm.rs  web.rs
