[package]
name = "_3du"
version = "0.1.0"
edition = "2021"

[dependencies]
# Python interpreter
rustpython-vm = "0.3.1"

# simplifies bit/byte-level operations
bytemuck = { version = "1.16.0", features = ["derive"] }

# Abstraction layer for the paltform's graphics API
wgpu = "0.20.1"

# Basic vector and matrix types and operations thereon
glam = "0.28.0"

pollster = "0.3.0"
log = "0.4.21"
env_logger = "0.11.3"
winit = "0.30.1"
