[package]
name = "bindings"
description = "Common types, macros and helper functions for language bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
winit.workspace = true

[lints]
workspace = true
