[package]
name = "gam3du-framework"
description = "A game engine written for educational purposes. The main goals are learning/teaching software development, ease of use and having fun!"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
gam3du-framework-common.workspace = true

ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
winit = { workspace = true, default-features = true }

[lints]
workspace = true
