[package]
name = "gam3du-framework"
description = "A game engine written for educational purposes. The main goals are learning/teaching software development, ease of use and having fun!"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
tracing-subscriber = { workspace = true, default-features = true }
gam3du-framework-common.workspace = true

tracing.workspace = true
# ctrlc.workspace = true
wgpu.workspace = true
winit = { workspace = true, default-features = true }
pollster.workspace = true
web-time.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wgpu.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }
tracing-web.workspace = true
console_error_panic_hook.workspace = true
# winit = { workspace = true, features = ["wasm"] }
# fern.workspace = true
wasm-bindgen.workspace = true
# wasm-bindgen-futures.workspace = true
# # We need these features in the framework examples and tests
web-sys = { workspace = true, features = [
    # "Location",
    # "Blob",
    # "RequestInit",
    # "RequestMode",
    # "Request",
    # "ImageData",
    # "Response",
    # "HtmlImageElement",
    # "WebGl2RenderingContext",
    # "CanvasRenderingContext2d",
] }

[lints]
workspace = true
