[package]
name = "runtimes"
description = "Common types, macros and helper functions for language runtimes"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
winit.workspace = true

[lints]
workspace = true
