[package]
name = "winit"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license-file = "LICENSE-MIT"
readme = "README.md"

[dependencies]
gam3du-framework.workspace = true
winit = { workspace = true, default-features = true }
wgpu = { workspace = true, features = ["webgl"] }
image = { workspace = true, features = ["png"] }
tracing = { workspace = true, features = ["log"] }
pollster.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
# winit = { workspace = true, features = ["web-platform"] }
web-sys.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true
