[package]
name = "application-robot"
description = "A simple robot moving across a 2D-plane."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
gam3du-framework.workspace = true
engine-robot.workspace = true
gam3du-framework-common.workspace = true
runtime-python.workspace = true
lib-file-storage.workspace = true

web-time.workspace = true
# "signal", 
# tokio = { workspace = true, features = ["rt", "macros", "time"] }
# tokio-util = { workspace = true }
rustpython-vm.workspace = true
log.workspace = true
serde_json.workspace = true
winit = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# [target.'cfg(not(target_os = "wasm32"))'.features]
# default = ["general_feature"]

# [target.'cfg(target_arch = "wasm32")'.features]
# gam3du-framework.workspace = { workspace = true, features = ["wasm32"] }
# default = ["winonly_replacement"]


[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook.workspace = true
tracing-web.workspace = true

[build-dependencies]
gam3du-framework-common.workspace = true
runtime-python-bindgen.workspace = true

serde_json.workspace = true

[lints]
workspace = true
