[package]
name = "application-robot"
description = "A simple robot moving across a 2D-plane."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# gam3du-framework-common.workspace = true
# gam3du-framework.workspace = true
# engine-robot.workspace = true
# runtime-python.workspace = true

# winit = { workspace = true, default-features = true }
# serde_json = { workspace = true, features = ["std"] }
# web-time.workspace = true
# "signal", 
# tracing.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# lib-file-storage.workspace = true
# tokio = { workspace = true, features = ["rt", "macros", "time"] }
# tokio-util = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# wasm-bindgen.workspace = true
# web-time.workspace = true
# rustpython.workspace = true
# rustpython-vm.workspace = true
# web-sys = { workspace = true, features = ["MessagePort", "MessageEvent"] }

[build-dependencies]
gam3du-framework-common.workspace = true
runtime-python-bindgen.workspace = true
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
