[package]
name = "bind-python"
description = "Python bindings to extend and control a gam3du engine"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
bindings.workspace = true
serde_json.workspace = true

[lints]
workspace = true
