[package]
name = "engine-robot"
description = "A robot moving on a 2d grid performing simple tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
rand.workspace = true
gam3du-framework.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
wgpu.workspace = true
log.workspace = true
glam = { workspace = true, features = ["bytemuck"] }
rustpython-vm.workspace = true
runtime-python.workspace = true

[lints]
workspace = true
