[package]
name = "engine-robot"
description = "A robot moving on a 2d grid performing simple tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
runtime-python.workspace = true

bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
log.workspace = true
rand.workspace = true
rustpython-vm.workspace = true
wgpu.workspace = true

[lints]
workspace = true
