[package]
workspace = "../../workspace-common"
name = "engine-robot"
description = "A robot moving on a 2d grid performing simple tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
runtime-python.workspace = true
lib-geometry.workspace = true
lib-time.workspace = true
lib-gltf-model.workspace = true

bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
tracing.workspace = true
rand.workspace = true
rustpython-vm.workspace = true
wgpu.workspace = true
web-time.workspace = true

[lints]
workspace = true
